# brown-saved-skills

./: .gitignore  settings.json  settings.local.json
commands/: CHANGELOG.md  README.md  audit-aws-security.md  commit-only.md  commit-push-pr.md  commit.md  new-project.md  plan-feature.md  quality-check.md  question.md  roadmap-execute.md  roadmap-plan.md  squashed.md  test.md  troubleshoot-01.md  troubleshoot-02.md  worktree.md
hooks/: check-email-dashes.sh  session-start-sync.sh  skill-crud-sync.sh  sync-skills-bidirectional.sh
plans/: harmonic-singing-minsky.md
scheduled-tasks/afternoon-email-triage/: SKILL.md
scheduled-tasks/evening-skills-sync/: SKILL.md
scheduled-tasks/morning-email-triage/: SKILL.md
scheduled-tasks/morning-skills-sync/: SKILL.md
skills/airtable-config/: README.md  _config.py  airtable_config.py  config.sh
skills/airtable-field-reference/: reference.md
skills/airtable-inbox-review/: reference.md
skills/annual-planning/: reference.md
skills/associating-deals-with-campaigns/: SKILL.md  associate_deals.py
skills/auditing-task-quality/: reference.md
skills/bb-case-studies/: reference.md
skills/bb-email-approaches/: reference.md
skills/calendar-availability/: README.md  fetch_events.py  find_availability.py
skills/check-ai-usage/: reference.md
skills/dev-writing-unit-tests/evals/files/eval-4-async-service/: pyproject.toml
skills/dev-writing-unit-tests/evals/files/eval-4-async-service/src/: notification_dispatcher.py
skills/dev-writing-unit-tests/evals/files/eval-4-async-service/tests/: test_notification_dispatcher.py
(+425 files in other folders)
